--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,13 +26,13 @@ jobs:
       run: |
         arduino-cli lib update-index
         arduino-cli lib install "AsyncTCP"
-        arduino-cli lib install "ESPAsyncTCP"
         arduino-cli lib install "ESPAsyncWebServer"
+        arduino-cli lib install "ESPAsyncTCP"
 
-    - name: Clone ESPAsync_WiFiManager into custom lib folder
+    - name: Clone ESPAsyncWiFiManager library manually
       run: |
         mkdir -p custom-libraries
-        git clone --depth 1 https://github.com/khoih-prog/ESPAsync_WiFiManager.git custom-libraries/ESPAsync_WiFiManager
+        git clone --depth 1 https://github.com/khoih-prog/ESPAsync_WiFiManager.git custom-libraries/ESPAsyncWiFiManager
 
     - name: Compile Arduino sketch
       run: |
