--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build ESP32 Project
+name: Build ESP32
 
 on:
   push:
@@ -9,26 +9,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Setup Arduino CLI
-      uses: arduino/setup-arduino-cli@v1
+      - name: Setup Arduino CLI
+        uses: arduino/setup-arduino-cli@v1
 
-    - name: Install ESP32 core
-      run: |
-        arduino-cli core update-index
-        arduino-cli core install esp32:esp32
+      - name: Install ESP32 core
+        run: |
+          arduino-cli core update-index
+          arduino-cli core install esp32:esp32
 
-    - name: Install libraries
-      run: |
-        arduino-cli lib install "AsyncTCP"
-        arduino-cli lib install "ESPAsyncWebServer"
-        # ESPAsyncWiFiManager is manually included in lib/
+      - name: Install dependencies
+        run: |
+          arduino-cli lib install "ESPAsyncWebServer"
+          arduino-cli lib install "AsyncTCP"
+          # ESPAsyncWiFiManager is added manually
 
-    - name: Compile
-      run: |
-        arduino-cli compile \
-          --fqbn esp32:esp32:esp32doit-devkit-v1 \
-          --libraries lib \
-          esp32_lcd_g4_s2_www_ok
+      - name: Compile sketch
+        run: |
+          arduino-cli compile \
+            --fqbn esp32:esp32:esp32dev \
+            --libraries lib \
+            esp32_lcd_g4_s2_www_ok
