--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,10 @@ jobs:
     - name: Install Arduino CLI
       run: |
         curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh
-        echo "$HOME/.arduino15/bin" >> $GITHUB_PATH
+        echo "$HOME/bin" >> $GITHUB_PATH
+
+    - name: Check Arduino CLI version
+      run: arduino-cli version
 
     - name: Update Arduino CLI core index
       run: arduino-cli core update-index
